# lua5.3-virtual-machine

./: CMakeLists.txt  LICENSE  README.md  main.cpp
lua53/src/: lua_conf.mak  wlua.rc
lua_tests/: arith.lua  closure.out  lua  luac  luac.out  max.lua  max.out
src/: api_access.cpp  api_push.cpp  api_stack.cpp  chunk_log.hpp  chunk_reader.hpp  chunk_types.hpp  instruction_decode.hpp  instruction_types.hpp  lua_consts.hpp  lua_stack.hpp  lua_state.hpp  lua_value.hpp
src/api/: lua_consts.hpp  lua_state.hpp  lua_vm.hpp
src/binChunk/: chunk_log.hpp  chunk_types.hpp
src/number/: math.cpp  math.h  parser.cpp  parser.h
src/state/: api_access.cpp  api_arith.cpp  api_call.cpp  api_closure.cpp  api_compare.cpp  api_get.cpp  api_misc.cpp  api_push.cpp  api_stack.cpp  api_vm.cpp  closure.hpp  lua_impl.cpp  lua_stack.hpp  lua_state.hpp  lua_table.hpp  lua_value.hpp
src/vm/: inst.h  inst_load.cpp  inst_misc.cpp  inst_operators.cpp  instruction_decode.hpp  instruction_types.hpp  opcodes.hpp
